infrastructure/kubernetes/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terpcatalog
  labels:
    app: terpcatalog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: terpcatalog
  template:
    metadata:
      labels:
        app: terpcatalog
    spec:
      containers:
        - name: terpcatalog
          image: registry.digitalocean.com/tiny-tunnel-registry/terpcatalog:$IMAGE_TAG
          ports:
            - containerPort: 8000
            - containerPort: 8001
