infrastructure/kubernetes/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: terpcatalog
spec:
  selector:
    app: terpcatalog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
