infrastructure/kubernetes/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: terpcatalog
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: terpcatalog.campbel.io
    http:
      paths:
      - path: /
        backend:
          serviceName: terpcatalog
          servicePort: 80
